@@ -1,5 +1,6 @@
 package cn.org.bachelor.iam;
 
+import lombok.Getter;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
@@ -9,15 +10,17 @@ import java.security.InvalidParameterException;
 public class PasswordEncoderHolder {
 
 
+    @Getter
     private static PasswordEncoder passwordEncoder;
-
-    public static PasswordEncoder getPasswordEncoder() {
-        return passwordEncoder;
-    }
 
 
     public static void setConfig(String config) throws Exception {
-        Object o = Class.forName(config).newInstance();
+        try {
+            Class.forName(config);
+        } catch (ClassNotFoundException e) {
+            return;
+        }
+        Object o = Class.forName(config).getConstructor().newInstance();
         if (!(o instanceof PasswordEncoder)) {
             throw new InvalidParameterException("passwordEncoderName: [" + config + "] is not a PasswordEncoder.");
         }
